[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Maitoza",email = "mikemaitoza@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "my_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=6.30.1,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]
